fix for wraping div in the home !

--- a/src/styles/ModeDescription.css
+++ b/src/styles/ModeDescription.css
@@ -1,6 +1,6 @@
 .mode-description {
-  display: flex;
+  display: block;
   flex-flow: wrap;
-  width: 100px;
+  max-width: 95%;
   overflow-wrap: break-word;
 }
